# mcp

./: .gitignore
src/mysql-mcp-server/: pyproject.toml
src/oci-api-mcp-server/: pyproject.toml
src/oci-cloud-guard-mcp-server/: pyproject.toml
src/oci-compute-instance-agent-mcp-server/: pyproject.toml
src/oci-compute-mcp-server/: pyproject.toml
src/oci-database-mcp-server/: pyproject.toml
src/oci-faaas-mcp-server/: pyproject.toml
src/oci-identity-mcp-server/: pyproject.toml
src/oci-iot-mcp-server/: README.md  pyproject.toml
src/oci-iot-mcp-server/oracle/: __init__.py
src/oci-iot-mcp-server/oracle/oci_iot_mcp_server/: __init__.py  health.py  server.py
src/oci-logging-mcp-server/: pyproject.toml
src/oci-migration-mcp-server/: pyproject.toml
src/oci-monitoring-mcp-server/: pyproject.toml
src/oci-network-load-balancer-mcp-server/: pyproject.toml
src/oci-networking-mcp-server/: pyproject.toml
src/oci-object-storage-mcp-server/: pyproject.toml
src/oci-registry-mcp-server/: pyproject.toml
src/oci-resource-search-mcp-server/: pyproject.toml
src/oci-usage-mcp-server/: pyproject.toml
